# bevy_2d_game_test

./: Cargo.toml
src/: components.rs  dialogue.rs  look_at_camera.rs  main.rs  npc.rs  player.rs
