[package]
name = "game_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# $env:RUST_BACKTRACE="full"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
queues = "1.1.0"
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_asset_loader = { version = "0.14.1", features = ["2d"] }
bevy_sprite3d = "2.3.0"
bevy-inspector-egui = "0.14.0"
bevy_editor_pls = "0.2.0"
bevy_spatial = { version = "0.4.0", features = ["rstar"] }